syntax = "proto3";

import "property_type.proto";

service CommentService {
    rpc GetAllPendingComments (EmptyMessage) returns (stream CommentMessage) {}

    rpc AcceptComment (CommentIdMessage) returns (CommentMessage) {}

    rpc DenyComment (CommentIdMessage) returns (CommentMessage) {}
}

message CommentMessage {
    int64 id = 1;
    string first_name = 2;
    string surname = 3;
    string email = 4;
    string timestamp = 5;
    string content = 6;
}

message CommentIdMessage {
    int64 id = 1;
}